force-app/main/default/objects/Candidate__c/fields/alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>