force-app/main/default/objects/Candidate__c/fields/Applicant_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Status__c</fullName>
    <label>Applicant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Do Not Submit</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>