force-app/main/default/objects/Candidate__c/fields/Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Company__c</fullName>
    <label>Current Company</label>
    <length>250</length>
    <type>Text</type>
</CustomField>