force-app/main/default/objects/Candidate__c/fields/Experience_float__c.field-meta.xml
<CustomField>
    <fullName>Experience_float__c</fullName>
    <description>This formula field gives a float value from the value of Experience year and Experience month from the layout, this field should be hidden from layout and only be used by developers</description>
    <formula>IF(
    ISBLANK(Experience_Year__c), 0, Experience_Year__c
) +
(
    IF(ISBLANK(Experience_Month__c), 0, Experience_Month__c) / 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience_float</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>