force-app/main/default/objects/Candidate__c/fields/Experience_Year__c.field-meta.xml
<CustomField>
    <fullName>Experience_Year__c</fullName>
    <inlineHelpText>Please put in the the amount of year the candidate has experience of</inlineHelpText>
    <label>Experience Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>