force-app/main/default/objects/Candidate__c/fields/Institute_Name__c.field-meta.xml
<CustomField>
    <fullName>Institute_Name__c</fullName>
    <description>This field contains Candidate institute name.</description>
    <inlineHelpText>Enter the name of the institute or university from which the candidate obtained their highest qualification</inlineHelpText>
    <label>Institute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>