force-app/main/default/objects/Candidate__c/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <description>This field stores the URL to the candidate’s LinkedIn profile. It helps recruiters quickly access professional history, connections, endorsements, and other publicly shared qualifications.</description>
    <label>LinkedIn Profile</label>
    <type>TextArea</type>
</CustomField>