force-app/main/default/objects/Candidate__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <description>This field stores the length of the candidate’s notice period with their current employer, expressed in days. It is used to estimate the potential joining date and coordinate hiring schedules. Typical values range from 0 to 90 days.</description>
    <label>Notice Period (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>15 days or less</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>Currently serving Notice Period</fullName>
            </value>
            <value>
                <fullName>Immediate Joiner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>