force-app/main/default/objects/Candidate__c/fields/Offered_CTC__c.field-meta.xml
<CustomField>
    <fullName>Offered_CTC__c</fullName>
    <description>This field captures the total annual compensation (Cost to Company) that has been formally offered to the candidate. It includes fixed pay, variable components, and benefits. Used for offer tracking, reporting, and analysis.</description>
    <label>Offered CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>