force-app/main/default/objects/Candidate__c/fields/Open_for_relocation__c.field-meta.xml
<CustomField>
    <fullName>Open_for_relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the candidate is willing to relocate to another location for job opportunities.</description>
    <label>Open for relocation</label>
    <type>Checkbox</type>
</CustomField>