force-app/main/default/objects/Candidate__c/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <inlineHelpText>Add your PAN card number</inlineHelpText>
    <label>PAN Card</label>
    <length>10</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>