force-app/main/default/objects/Candidate__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Please enter valid phone number with availability of whatsapp.</description>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>