force-app/main/default/objects/Candidate__c/fields/Proposed_Offered_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Offered_Rate__c</fullName>
    <inlineHelpText>Offered Candidate rate</inlineHelpText>
    <label>Proposed Offered Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>