force-app/main/default/objects/Candidate__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <description>This field shows who referred the candidate</description>
    <label>Referred By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>