force-app/main/default/objects/Candidate__c/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <description>This field shows the Referrer&apos;s email for the recruiter to be able to contact them</description>
    <label>Referrer&apos;s Email</label>
    <type>Email</type>
</CustomField>