force-app/main/default/objects/Candidate__c/fields/Referrer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Phone__c</fullName>
    <description>This field shows the referrer&apos;s phone number for the recruiter to be able to contact them</description>
    <label>Referrer&apos;s Phone</label>
    <type>Phone</type>
</CustomField>