force-app/main/default/objects/Candidate__c/fields/Relevant_Experience__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Experience__c</fullName>
    <inlineHelpText>Relevant experience in current profile</inlineHelpText>
    <label>Relevant Experience (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>