force-app/main/default/objects/Candidate__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>This field stores the candidate’s primary skills, such as programming languages, tools, or domain expertise. It is used for displaying and searching relevant skills to match candidates with job openings.</description>
    <inlineHelpText>Enter comma-separated skills. For example: Apex Programming, Admin, LWC, etc.</inlineHelpText>
    <label>Skills</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>