force-app/main/default/objects/Candidate__c/fields/Soft_Skills__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skills__c</fullName>
    <description>This field stores the soft skills of the candidate.</description>
    <inlineHelpText>Enter comma-separated soft skills. For example: Communication, Teamwork, Problem Solving, Leadership, etc.</inlineHelpText>
    <label>Soft Skills</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>