force-app/main/default/objects/Candidate__c/fields/Supplier_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Name__c</fullName>
    <description>This field shows the supplier&apos;s Contact Name, so that it is easily available to view on Candidate&apos;s Detail Page</description>
    <formula>Supplier__r.Contact_Name__c</formula>
    <label>Supplier&apos;s Contact Name</label>
    <type>Text</type>
</CustomField>