force-app/main/default/objects/Candidate__c/fields/Supplier_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Phone__c</fullName>
    <description>This field shows the Supplier&apos;s contact info in the Candidate&apos;s detail for easy access</description>
    <formula>Supplier__r.Contact_Phone__c</formula>
    <label>Supplier&apos;s Contact Phone</label>
    <type>Text</type>
</CustomField>