force-app/main/default/objects/Candidate__c/fields/Supplier_Expected_Rate__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Expected_Rate__c</fullName>
    <inlineHelpText>supplier asking</inlineHelpText>
    <label>Supplier Expected Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>