force-app/main/default/objects/Candidate__c/fields/Total_Experience_txt__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience_txt__c</fullName>
    <description>Will show the total experience based on the Experience Month and Experience Year</description>
    <formula>TEXT(FLOOR(Experience_Year__c + (Experience_Month__c / 12))) &amp; &quot; year&quot; &amp;
IF(FLOOR(Experience_Year__c + (Experience_Month__c / 12)) &lt;&gt; 1, &quot;s&quot;, &quot;&quot;) &amp;
IF(
    MOD(Experience_Month__c, 12) &gt; 0,
    &quot; &quot; &amp; TEXT(MOD(Experience_Month__c, 12)) &amp; &quot; month&quot; &amp;
    IF(MOD(Experience_Month__c, 12) &lt;&gt; 1, &quot;s&quot;, &quot;&quot;),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Experience</label>
    <type>Text</type>
</CustomField>