force-app/main/default/objects/Candidate__c/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>decline to designate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>