force-app/main/default/objects/Candidate__c/fields/Year_Of_Passing__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Passing__c</fullName>
    <label>Year Of Passing</label>
    <length>4</length>
    <type>Text</type>
</CustomField>