force-app/main/default/objects/Candidate__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>Candidates who have been sourced externally and are not associated with the organization.</description>
    <label>External</label>
</RecordType>