force-app/main/default/objects/Candidate__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>Candidates who are current employees of the organization within the company.</description>
    <label>Internal</label>
</RecordType>