force-app/main/default/objects/Candidate__c/recordTypes/Referral.recordType-meta.xml
<RecordType>
    <fullName>Referral</fullName>
    <active>true</active>
    <description>Candidates who have been referred by current employees, partners, or affiliates of the organization.</description>
    <label>Referral</label>
</RecordType>