force-app/main/default/objects/Candidate__c/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <description>Candidates submitted by external recruitment agencies, vendors, or third-party suppliers.</description>
    <label>Supplier</label>
</RecordType>