force-app/main/default/objects/Candidate__c/validationRules/Candidate_Positive_Salary_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_Positive_Salary_Validation</fullName>
    <active>true</active>
    <description>Ensure positive number for ctc fields</description>
    <errorConditionFormula>OR(
    Current_CTC__c &lt;= 0,
    Expected_CTC__c &lt;= 0,
    Offered_CTC__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Amounts should be positive and greater than zero for Current CTC, Expected CTC, and Offered CTC.</errorMessage>
</ValidationRule>