force-app/main/default/objects/Candidate__c/validationRules/Expected_CTC_Not_Less_Than_Current.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_CTC_Not_Less_Than_Current</fullName>
    <active>true</active>
    <description>Validation Check - Expected salary should not be less than current salary</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Expected_CTC__c)),
  NOT(ISBLANK(Current_CTC__c)),
  Expected_CTC__c &lt; Current_CTC__c
)</errorConditionFormula>
    <errorMessage>Expected CTC must be greater than or equal to Current CTC.</errorMessage>
</ValidationRule>