force-app/main/default/objects/Candidate__c/validationRules/Require_Education_Details_For_Recordtype.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Education_Details_For_Recordtype</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &quot;Referral&quot;,
        RecordType.DeveloperName = &quot;Internal&quot;,
        RecordType.DeveloperName = &quot;External&quot;
    ),
    OR(
        ISBLANK(Highest_Qualification__c),
        ISBLANK(Institute_Name__c),
        ISBLANK(Year_Of_Passing__c),
        ISBLANK(GPA_Percentage__c)
    )
)</errorConditionFormula>
    <errorMessage>Highest Qualification, Institute Name, Year of Passing, and GPA/Percentage are mandatory for this Candidate type.</errorMessage>
</ValidationRule>