force-app/main/default/objects/Candidate__c/listViews/Candidate_List_View.listView-meta.xml
<ListView>
    <fullName>Candidate_List_View</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Total_Experience__c</columns>
    <columns>LinkedIn_Profile__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Candidate List View</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>